# pyVoice

./: .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  autopytoexe-config.json  main.py  pyproject.toml  requirements.txt  respond.py  run.py  tests.py
.github/: dependabot.yml
.github/workflows/: build-pyinstaller.yml  ci.yml  codeql-analysis.yml  git-logs.yml  pytest.yml  workflow-pep.yml
commands/: date_time.py
config/: settings.py
pdoc/templates/: head.mako  logo.mako
pyinstaller/: linux.spec
scripts/: setup_linux.sh  test.bat
src/: __version__.py  banner.txt  check_installation.py  main.py  respond.py  settings.py
src/commands/: date_time.py  misc.py
src/config/: settings.py
src/core/commands/: cmd_about_me.py  cmd_commands.py  cmd_coronavirus.py  cmd_date.py  cmd_echo.py  cmd_google.py  cmd_google_news.py  cmd_google_search.py  cmd_note_add.py  cmd_note_clear.py  cmd_note_read.py  cmd_quit.py  cmd_register_install.py  cmd_time.py  cmd_weather.py  cmd_weather_forecast.py
src/core/modules/: __init__.py  api.py  log.py  matching.py  replying.py  sentry.py  startup.py  stt.py  tts.py  utils.py
src/data/: settings.json  settings.json.bkp  settings.model.json
src/data/json/: notes.json  phrases.json  replies.json
src/tests/: test_matching.py
src/utils/: audio.py
utils/: audio.py
wheels/: yappi-1.3.2-cp39-cp39-win_amd64.whl
