[tool.poetry]
name = "pyvoice"
version = "0.2.0"
description = ""
authors = ["Afonso Santos <afonso.faisca1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
wheel = "^0.36.2"
gTTS = "^2.2.2"
SpeechRecognition = "^3.8.1"
playsound = "^1.2.2"
beautifulsoup4 = "^4.9.3"
sentry-sdk = "^0.20.3"
pyfiglet = "^0.8.post1"
printy = "^2.1.1"
pypiwin32 = { markers = "sys_platform == 'win32'", version = "^223" }
pyaudio = [
    { platform = "linux", version = "^0.2.11" },
    { markers = "sys_platform == 'win32'", path = "wheels/PyAudio-0.2.11-cp39-cp39-win_amd64.whl" },
]

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.5"
pre-commit = "^2.10.1"
mypy = "^0.812"
pyinstaller = "^4.2"
auto-py-to-exe = "^2.8.0"
pdoc3 = "^0.9.2"
pytest = "^6.2.2"
pytest-html = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
